dropshot/tests/fail/bad_server_only4.stderr
error: server `MyTrait` does not have associated type `Context`
       (this type specifies the shared context for endpoints)
 --> tests/fail/bad_server_only4.rs:8:7
  |
8 | trait MyTrait {}
  |       ^^^^^^^
